<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".LevelOneTrapezGame">

    <TextView
        android:id="@+id/guideTxtTrapezGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/trapez_game_instruction_txt"
        android:textSize="8pt"
        android:textColor="#ffffff"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/trapezView"/>

    <com.example.drawappofficial.views.DrawView
        android:id="@+id/trapezView"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:elevation="5dp"
        app:layout_constraintTop_toBottomOf="@id/guideTxtTrapezGame"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/idTrapezBtn"/>

    <Button
        android:id="@+id/clearTrapezBtn"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/clear_txt"
        android:textSize="9pt"
        android:textStyle="bold"
        android:background="@color/wrong"
        android:textColor="#ffffff"
        android:elevation="5dp"
        app:layout_constraintTop_toBottomOf="@id/trapezView"
        app:layout_constraintBottom_toTopOf="@id/compTrapezTxt"
        app:layout_constraintRight_toLeftOf="@id/idTrapezBtn"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <Button
        android:id="@+id/idTrapezBtn"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:text="@string/id_txt"
        android:textSize="9pt"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:background="@color/correct"
        android:elevation="5dp"
        app:layout_constraintBottom_toTopOf="@id/compTrapezTxt"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trapezView"
        app:layout_constraintLeft_toRightOf="@id/clearTrapezBtn"/>

    <TextView
        android:id="@+id/compTrapezTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trapez_game_progress_txt"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:textSize="10pt"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/idTrapezBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/trapezContBtn"/>

    <Button
        android:id="@+id/trapezContBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="9pt"
        android:background="@drawable/button_custom"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:text="@string/continue_string"
        android:elevation="5dp"
        app:layout_constraintTop_toBottomOf="@id/compTrapezTxt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>